# libraryAPI

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 92d1edb05f69_init.py
app/: database.py  main.py  models.py  settings.py
app/api/: books.py  users.py
app/db_managers/: base.py  books.py  borrowing.py  users.py
app/schemas/: books.py  users.py
app/services/: books.py  users.py
app/utils/: database.py  dependencies.py  pagination.py  schemas.py
scripts/: entrypoint.sh
tests/: conftest.py  test_books.py  test_users.py
