[project]
name = "libraryapi"
version = "0.1.0"
description = "Recruitment purpose FastAPI application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "furl>=2.1.4",
    "httpx>=0.28.1",
    "psycopg>=3.3.4",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# E (Error), F (Pyflakes), I (isort - sortowanie importów), B (flake8-bugbear)
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest]
asyncio_mode = "auto"
