[project]
name = "libraryapi"
version = "0.1.0"
description = "Recruitment purpose FastAPI application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "furl>=2.1.4",
    "httpx>=0.28.1",
    "psycopg>=3.3.4",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "B008", # calling function as argument default (eq. Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "greenlet>=3.5.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.14.2",
]
